--- a/ios/Base.lproj/Main.storyboard
+++ b/ios/Base.lproj/Main.storyboard
@@ -22,17 +22,32 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="mutedStandard" pitchEnabled="NO" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KHw-qX-2nm">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </mapView>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vlp-Ij-9pj">
+                                <rect key="frame" x="20" y="567" width="335" height="50"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="4rz-VO-wes"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="Connect">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Vlp-Ij-9pj" firstAttribute="leading" secondItem="KHw-qX-2nm" secondAttribute="leading" constant="20" id="6l0-C2-BHa"/>
                             <constraint firstItem="KHw-qX-2nm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Nvg-Uh-9vY"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="KHw-qX-2nm" secondAttribute="bottom" id="RdN-Sd-or7"/>
+                            <constraint firstAttribute="bottom" secondItem="KHw-qX-2nm" secondAttribute="bottom" id="RdN-Sd-or7"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KHw-qX-2nm" secondAttribute="trailing" id="daG-hg-lEN"/>
                             <constraint firstItem="KHw-qX-2nm" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="i8j-uM-LdP"/>
+                            <constraint firstItem="KHw-qX-2nm" firstAttribute="trailing" secondItem="Vlp-Ij-9pj" secondAttribute="trailing" constant="20" id="iyj-EN-GvK"/>
+                            <constraint firstItem="KHw-qX-2nm" firstAttribute="bottom" secondItem="Vlp-Ij-9pj" secondAttribute="bottom" constant="50" id="q7K-8Z-tQf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="connectButton" destination="Vlp-Ij-9pj" id="gIn-QT-guk"/>
                         <outlet property="mapView" destination="KHw-qX-2nm" id="UnK-gr-WNk"/>
                     </connections>
                 </viewController>
