--- a/ios/Base.lproj/Main.storyboard
+++ b/ios/Base.lproj/Main.storyboard
@@ -22,6 +22,14 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="mutedStandard" pitchEnabled="NO" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KHw-qX-2nm">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </mapView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ncU-xu-JOf">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="MqE-th-kwz">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vlp-Ij-9pj">
                                 <rect key="frame" x="20" y="567" width="335" height="50"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -39,10 +47,14 @@
                             <constraint firstItem="Vlp-Ij-9pj" firstAttribute="leading" secondItem="KHw-qX-2nm" secondAttribute="leading" constant="20" id="6l0-C2-BHa"/>
                             <constraint firstItem="KHw-qX-2nm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Nvg-Uh-9vY"/>
                             <constraint firstAttribute="bottom" secondItem="KHw-qX-2nm" secondAttribute="bottom" id="RdN-Sd-or7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="ncU-xu-JOf" secondAttribute="bottom" id="XKJ-9u-Nr5"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KHw-qX-2nm" secondAttribute="trailing" id="daG-hg-lEN"/>
+                            <constraint firstItem="ncU-xu-JOf" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dcO-Hc-RIp"/>
+                            <constraint firstAttribute="trailing" secondItem="ncU-xu-JOf" secondAttribute="trailing" id="gpM-xT-4bh"/>
                             <constraint firstItem="KHw-qX-2nm" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="i8j-uM-LdP"/>
                             <constraint firstItem="KHw-qX-2nm" firstAttribute="trailing" secondItem="Vlp-Ij-9pj" secondAttribute="trailing" constant="20" id="iyj-EN-GvK"/>
                             <constraint firstItem="KHw-qX-2nm" firstAttribute="bottom" secondItem="Vlp-Ij-9pj" secondAttribute="bottom" constant="50" id="q7K-8Z-tQf"/>
+                            <constraint firstItem="ncU-xu-JOf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="t2I-j9-Lgj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
