--- a/ios/Base.lproj/Main.storyboard
+++ b/ios/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="mutedStandard" pitchEnabled="NO" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KHw-qX-2nm">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="mutedStandard" pitchEnabled="NO" showsUserLocation="YES" showsCompass="NO" showsScale="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KHw-qX-2nm">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </mapView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ncU-xu-JOf">
@@ -60,6 +60,7 @@
                     </view>
                     <connections>
                         <outlet property="connectButton" destination="Vlp-Ij-9pj" id="gIn-QT-guk"/>
+                        <outlet property="connectButtonBottomConstraint" destination="q7K-8Z-tQf" id="sTQ-10-kxh"/>
                         <outlet property="mapView" destination="KHw-qX-2nm" id="UnK-gr-WNk"/>
                     </connections>
                 </viewController>
