--- a/ios/Base.lproj/Main.storyboard
+++ b/ios/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -43,20 +44,84 @@
             <point key="canvasLocation" x="2118" y="904"/>
         </scene>
         <!--Home-->
+        <scene sceneID="O9x-N1-FWL">
+            <objects>
+                <navigationController id="mGF-oc-uKE" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Home" id="hnI-dB-cW7"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zUN-WP-Fbv">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="vcJ-zM-WIr" kind="relationship" relationship="rootViewController" id="Ofe-aN-1ye"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5RG-FT-yVL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="346" y="904"/>
+        </scene>
+        <!--Home-->
         <scene sceneID="48I-5N-ii4">
             <objects>
                 <viewController id="vcJ-zM-WIr" customClass="HomeScreenController" customModule="ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="E8J-qc-xuQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ablogo" translatesAutoresizingMaskIntoConstraints="NO" id="tTT-mu-cGx">
+                                <rect key="frame" x="87.5" y="99" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="tTT-mu-cGx" secondAttribute="height" multiplier="1:1" id="gY5-OL-Rp8"/>
+                                    <constraint firstAttribute="width" priority="999" constant="200" id="icK-wa-RF7"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m1g-rC-fLN">
+                                <rect key="frame" x="37.5" y="319" width="300" height="279"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="C6I-S8-wmt">
+                                        <rect key="frame" x="78.5" y="69.5" width="143" height="140"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KPX-WL-NKd">
+                                                <rect key="frame" x="0.0" y="0.0" width="143" height="30"/>
+                                                <state key="normal" title="Assess The Situation"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTR-qR-Ibn">
+                                                <rect key="frame" x="24" y="55" width="95" height="30"/>
+                                                <state key="normal" title="Find Delegate"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9HK-av-4aa">
+                                                <rect key="frame" x="10" y="110" width="123" height="30"/>
+                                                <state key="normal" title="Provide Feedback"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="C6I-S8-wmt" firstAttribute="centerX" secondItem="m1g-rC-fLN" secondAttribute="centerX" id="4DG-lg-3TJ"/>
+                                    <constraint firstItem="C6I-S8-wmt" firstAttribute="centerY" secondItem="m1g-rC-fLN" secondAttribute="centerY" id="edh-XT-uIW"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="m1g-rC-fLN" firstAttribute="width" secondItem="tTT-mu-cGx" secondAttribute="width" constant="100" id="1bT-5e-Hsh"/>
+                            <constraint firstItem="tTT-mu-cGx" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="JwI-0W-3cV" secondAttribute="leading" constant="20" id="8ho-Fw-fqc"/>
+                            <constraint firstItem="tTT-mu-cGx" firstAttribute="centerX" secondItem="E8J-qc-xuQ" secondAttribute="centerX" id="She-ju-TSa"/>
+                            <constraint firstItem="m1g-rC-fLN" firstAttribute="top" secondItem="tTT-mu-cGx" secondAttribute="bottom" constant="20" id="So1-2D-Y5Q"/>
+                            <constraint firstItem="JwI-0W-3cV" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="tTT-mu-cGx" secondAttribute="trailing" constant="20" id="fkj-Bg-Dhp"/>
+                            <constraint firstItem="JwI-0W-3cV" firstAttribute="bottom" secondItem="m1g-rC-fLN" secondAttribute="bottom" constant="20" id="jtn-cu-Qfl"/>
+                            <constraint firstItem="tTT-mu-cGx" firstAttribute="top" secondItem="JwI-0W-3cV" secondAttribute="top" constant="35" id="lDv-Qk-f4P"/>
+                            <constraint firstItem="m1g-rC-fLN" firstAttribute="centerX" secondItem="E8J-qc-xuQ" secondAttribute="centerX" id="vMu-wr-V0E"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="JwI-0W-3cV"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home" image="featured" id="QTI-e9-blc"/>
+                    <tabBarItem key="tabBarItem" title="Home" id="QTI-e9-blc"/>
+                    <navigationItem key="navigationItem" title="Home" id="ZJu-Lb-r0m"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wCg-G5-0FV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="346" y="904"/>
+            <point key="canvasLocation" x="344.80000000000001" y="1739.2803598200901"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="tLh-vk-26e">
@@ -68,7 +133,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="vcJ-zM-WIr" kind="relationship" relationship="viewControllers" id="zAM-NP-S5E"/>
+                        <segue destination="mGF-oc-uKE" kind="relationship" relationship="viewControllers" id="jv3-qz-BHt"/>
                         <segue destination="6yr-rk-cKJ" kind="relationship" relationship="viewControllers" id="q5f-X7-v7a"/>
                         <segue destination="Czx-Xo-YLq" kind="relationship" relationship="viewControllers" id="lPu-16-afG"/>
                     </connections>
@@ -79,6 +144,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="featured" width="16" height="16"/>
+        <image name="ablogo" width="349" height="349"/>
     </resources>
 </document>
