--- a/ios/Base.lproj/Main.storyboard
+++ b/ios/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NsK-cK-E49">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -11,27 +11,19 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Find Delegate View Controller-->
+        <!--Find Delegate-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="FindDelegateViewController" customModule="ios" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Find Delegate" id="BYZ-38-t0r" customClass="FindDelegateViewController" customModule="ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="mutedStandard" pitchEnabled="NO" showsUserLocation="YES" showsCompass="NO" showsScale="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KHw-qX-2nm">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                             </mapView>
-                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ncU-xu-JOf">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="MqE-th-kwz">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                </view>
-                                <blurEffect style="light"/>
-                            </visualEffectView>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vlp-Ij-9pj">
-                                <rect key="frame" x="20" y="567" width="335" height="50"/>
+                                <rect key="frame" x="20" y="649" width="335" height="50"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="4rz-VO-wes"/>
@@ -47,14 +39,10 @@
                             <constraint firstItem="Vlp-Ij-9pj" firstAttribute="leading" secondItem="KHw-qX-2nm" secondAttribute="leading" constant="20" id="6l0-C2-BHa"/>
                             <constraint firstItem="KHw-qX-2nm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Nvg-Uh-9vY"/>
                             <constraint firstAttribute="bottom" secondItem="KHw-qX-2nm" secondAttribute="bottom" id="RdN-Sd-or7"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="ncU-xu-JOf" secondAttribute="bottom" id="XKJ-9u-Nr5"/>
                             <constraint firstAttribute="trailing" secondItem="KHw-qX-2nm" secondAttribute="trailing" id="daG-hg-lEN"/>
-                            <constraint firstItem="ncU-xu-JOf" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dcO-Hc-RIp"/>
-                            <constraint firstAttribute="trailing" secondItem="ncU-xu-JOf" secondAttribute="trailing" id="gpM-xT-4bh"/>
                             <constraint firstItem="KHw-qX-2nm" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="i8j-uM-LdP"/>
                             <constraint firstItem="KHw-qX-2nm" firstAttribute="trailing" secondItem="Vlp-Ij-9pj" secondAttribute="trailing" constant="20" id="iyj-EN-GvK"/>
-                            <constraint firstItem="KHw-qX-2nm" firstAttribute="bottom" secondItem="Vlp-Ij-9pj" secondAttribute="bottom" constant="50" id="q7K-8Z-tQf"/>
-                            <constraint firstItem="ncU-xu-JOf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="t2I-j9-Lgj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Vlp-Ij-9pj" secondAttribute="bottom" constant="30" id="q7K-8Z-tQf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -66,14 +54,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-221" y="-63"/>
+            <point key="canvasLocation" x="346" y="2589"/>
         </scene>
         <!--Inbox-->
         <scene sceneID="nfv-fh-E1Y">
             <objects>
                 <viewController id="6yr-rk-cKJ" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Bie-gv-aeB">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Xdn-qU-wpM"/>
@@ -89,7 +77,7 @@
             <objects>
                 <viewController id="Czx-Xo-YLq" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hYQ-9c-fGW">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="p2Y-4a-5zt"/>
@@ -106,7 +94,7 @@
                 <navigationController id="mGF-oc-uKE" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Home" id="hnI-dB-cW7"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zUN-WP-Fbv">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -120,23 +108,23 @@
         <!--Home-->
         <scene sceneID="48I-5N-ii4">
             <objects>
-                <viewController id="vcJ-zM-WIr" customClass="HomeScreenController" customModule="ios" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Home" id="vcJ-zM-WIr" customClass="HomeScreenController" customModule="ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="E8J-qc-xuQ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ablogo" translatesAutoresizingMaskIntoConstraints="NO" id="tTT-mu-cGx">
-                                <rect key="frame" x="87.5" y="99" width="200" height="200"/>
+                                <rect key="frame" x="87.666666666666686" y="123" width="200" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="tTT-mu-cGx" secondAttribute="height" multiplier="1:1" id="gY5-OL-Rp8"/>
                                     <constraint firstAttribute="width" priority="999" constant="200" id="icK-wa-RF7"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m1g-rC-fLN">
-                                <rect key="frame" x="37.5" y="319" width="300" height="279"/>
+                                <rect key="frame" x="37.666666666666657" y="343" width="300" height="366"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="C6I-S8-wmt">
-                                        <rect key="frame" x="78.5" y="69.5" width="143" height="140"/>
+                                        <rect key="frame" x="78.333333333333343" y="113" width="143" height="140"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KPX-WL-NKd">
                                                 <rect key="frame" x="0.0" y="0.0" width="143" height="30"/>
@@ -145,6 +133,9 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTR-qR-Ibn">
                                                 <rect key="frame" x="24" y="55" width="95" height="30"/>
                                                 <state key="normal" title="Find Delegate"/>
+                                                <connections>
+                                                    <segue destination="BYZ-38-t0r" kind="show" id="2bL-56-QG0"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9HK-av-4aa">
                                                 <rect key="frame" x="10" y="110" width="123" height="30"/>
@@ -174,7 +165,7 @@
                         <viewLayoutGuide key="safeArea" id="JwI-0W-3cV"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" id="QTI-e9-blc"/>
-                    <navigationItem key="navigationItem" title="Home" id="ZJu-Lb-r0m"/>
+                    <navigationItem key="navigationItem" id="ZJu-Lb-r0m"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wCg-G5-0FV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
