inbox screen IB

--- a/ios/Base.lproj/Main.storyboard
+++ b/ios/Base.lproj/Main.storyboard
@@ -603,6 +603,35 @@ I love helping my fellow students when they are in need. Coming from a disadvant
             </objects>
             <point key="canvasLocation" x="344.80000000000001" y="1739.2803598200901"/>
         </scene>
+        <!--Inbox-->
+        <scene sceneID="wQW-pg-c4A">
+            <objects>
+                <tableViewController title="Inbox" id="6a0-HY-SIq" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="5Qg-sO-bjK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Fuc-M0-yVb">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Fuc-M0-yVb" id="9A1-pj-dLu">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="6a0-HY-SIq" id="OGL-Ly-sCT"/>
+                            <outlet property="delegate" destination="6a0-HY-SIq" id="Fv9-EJ-QB2"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Inbox" id="cYo-Dc-qgz"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R4S-Ni-5sC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1206" y="904"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="tLh-vk-26e">
             <objects>
@@ -614,8 +643,8 @@ I love helping my fellow students when they are in need. Coming from a disadvant
                     </tabBar>
                     <connections>
                         <segue destination="mGF-oc-uKE" kind="relationship" relationship="viewControllers" id="jv3-qz-BHt"/>
-                        <segue destination="6yr-rk-cKJ" kind="relationship" relationship="viewControllers" id="q5f-X7-v7a"/>
-                        <segue destination="z9u-XT-8iD" kind="relationship" relationship="viewControllers" id="Qp4-Bq-Cxd"/>
+                        <segue destination="6a0-HY-SIq" kind="relationship" relationship="viewControllers" id="PfF-7b-NCE"/>
+                        <segue destination="Czx-Xo-YLq" kind="relationship" relationship="viewControllers" id="lPu-16-afG"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JEg-Qq-upX" userLabel="First Responder" sceneMemberID="firstResponder"/>
