rename Home (navonly) to Home Nav, title for Home

--- a/ios/Base.lproj/Main.storyboard
+++ b/ios/Base.lproj/Main.storyboard
@@ -88,10 +88,10 @@
             </objects>
             <point key="canvasLocation" x="2118" y="904"/>
         </scene>
-        <!--Home-->
+        <!--Home Nav-->
         <scene sceneID="O9x-N1-FWL">
             <objects>
-                <navigationController id="mGF-oc-uKE" sceneMemberID="viewController">
+                <navigationController title="Home Nav" id="mGF-oc-uKE" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Home" id="hnI-dB-cW7"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zUN-WP-Fbv">
                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
@@ -114,17 +114,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ablogo" translatesAutoresizingMaskIntoConstraints="NO" id="tTT-mu-cGx">
-                                <rect key="frame" x="87.666666666666686" y="123" width="200" height="200"/>
+                                <rect key="frame" x="87.666666666666686" y="108" width="200" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="tTT-mu-cGx" secondAttribute="height" multiplier="1:1" id="gY5-OL-Rp8"/>
                                     <constraint firstAttribute="width" priority="999" constant="200" id="icK-wa-RF7"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m1g-rC-fLN">
-                                <rect key="frame" x="37.666666666666657" y="343" width="300" height="366"/>
+                                <rect key="frame" x="37.666666666666657" y="328" width="300" height="381"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="C6I-S8-wmt">
-                                        <rect key="frame" x="78.333333333333343" y="113" width="143" height="140"/>
+                                        <rect key="frame" x="78.333333333333343" y="120.66666666666669" width="143" height="140"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KPX-WL-NKd">
                                                 <rect key="frame" x="0.0" y="0.0" width="143" height="30"/>
@@ -138,7 +138,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9HK-av-4aa">
-                                                <rect key="frame" x="10" y="110" width="123" height="30"/>
+                                                <rect key="frame" x="10" y="109.99999999999994" width="123" height="30"/>
                                                 <state key="normal" title="Provide Feedback"/>
                                             </button>
                                         </subviews>
@@ -159,13 +159,13 @@
                             <constraint firstItem="m1g-rC-fLN" firstAttribute="top" secondItem="tTT-mu-cGx" secondAttribute="bottom" constant="20" id="So1-2D-Y5Q"/>
                             <constraint firstItem="JwI-0W-3cV" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="tTT-mu-cGx" secondAttribute="trailing" constant="20" id="fkj-Bg-Dhp"/>
                             <constraint firstItem="JwI-0W-3cV" firstAttribute="bottom" secondItem="m1g-rC-fLN" secondAttribute="bottom" constant="20" id="jtn-cu-Qfl"/>
-                            <constraint firstItem="tTT-mu-cGx" firstAttribute="top" secondItem="JwI-0W-3cV" secondAttribute="top" constant="35" id="lDv-Qk-f4P"/>
+                            <constraint firstItem="tTT-mu-cGx" firstAttribute="top" secondItem="JwI-0W-3cV" secondAttribute="top" constant="20" id="lDv-Qk-f4P"/>
                             <constraint firstItem="m1g-rC-fLN" firstAttribute="centerX" secondItem="E8J-qc-xuQ" secondAttribute="centerX" id="vMu-wr-V0E"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="JwI-0W-3cV"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" id="QTI-e9-blc"/>
-                    <navigationItem key="navigationItem" id="ZJu-Lb-r0m"/>
+                    <navigationItem key="navigationItem" title="Home" id="ZJu-Lb-r0m"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wCg-G5-0FV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
